[gd_scene load_steps=11 format=3 uid="uid://brokq15u7sbag"]

[ext_resource type="Texture2D" uid="uid://c376c3m7nuh8w" path="res://textures/backgroundMain.jpg" id="1_0wrwp"]
[ext_resource type="Script" path="res://Game/MainGame.gd" id="1_tdm0f"]
[ext_resource type="Texture2D" uid="uid://bgaddndfsxj0m" path="res://textures/cookie.png" id="3_l8bxl"]
[ext_resource type="FontFile" uid="uid://130j5bxxi0dw" path="res://fonts/Chuprassy.ttf" id="3_ptayf"]
[ext_resource type="Script" path="res://Game/CookieNode.gd" id="4_5ncd5"]
[ext_resource type="FontFile" uid="uid://dpa67ixbqnfi7" path="res://fonts/College Halo.ttf" id="4_187s3"]
[ext_resource type="PackedScene" uid="uid://qcs4terjr65p" path="res://Game/particles.tscn" id="7_w1gg2"]
[ext_resource type="PackedScene" uid="uid://dxspyga4b5j7h" path="res://Game/InGameUI/ui_ingame.tscn" id="8_wronw"]

[sub_resource type="CircleShape2D" id="CircleShape2D_tdllj"]
radius = 201.884

[sub_resource type="SpriteFrames" id="SpriteFrames_kf4u4"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": ExtResource("3_l8bxl")
}],
"loop": true,
"name": &"default",
"speed": 5.0
}]

[node name="MainGame" type="Node2D"]
script = ExtResource("1_tdm0f")

[node name="Background" type="Sprite2D" parent="."]
position = Vector2(357.938, 540)
scale = Vector2(0.707153, 1.05469)
texture = ExtResource("1_0wrwp")

[node name="MarginContainer" type="MarginContainer" parent="."]
offset_right = 720.0
offset_bottom = 1080.0
theme_override_constants/margin_left = 30
theme_override_constants/margin_top = 65
theme_override_constants/margin_right = 30
theme_override_constants/margin_bottom = 30

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer"]
layout_mode = 2

[node name="ScoreTitle" type="Label" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 1
theme_override_fonts/font = ExtResource("3_ptayf")
theme_override_font_sizes/font_size = 64
text = "Cookies"
horizontal_alignment = 1

[node name="CookiesPerSecond" type="Label" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
theme_override_fonts/font = ExtResource("4_187s3")
theme_override_font_sizes/font_size = 35
text = "Cookies 0/s"
horizontal_alignment = 1

[node name="ScoreCurrent" type="RichTextLabel" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
theme_override_fonts/normal_font = ExtResource("4_187s3")
theme_override_font_sizes/normal_font_size = 65
bbcode_enabled = true
text = "[p align=center] [shake rate=20.0 level=5]1500[/shake][/p]"
fit_content = true

[node name="CookieNode" type="StaticBody2D" parent="."]
z_as_relative = false
input_pickable = true
script = ExtResource("4_5ncd5")

[node name="ShapeCookie" type="CollisionShape2D" parent="CookieNode"]
position = Vector2(354, 533)
shape = SubResource("CircleShape2D_tdllj")

[node name="Cookie" type="AnimatedSprite2D" parent="CookieNode/ShapeCookie"]
position = Vector2(1, 0)
scale = Vector2(0.445313, 0.502051)
sprite_frames = SubResource("SpriteFrames_kf4u4")

[node name="Particle1" parent="CookieNode/ShapeCookie/Cookie" instance=ExtResource("7_w1gg2")]
position = Vector2(-170, 280)

[node name="UIIngame" parent="." instance=ExtResource("8_wronw")]
z_as_relative = false

[node name="TimerCookieGenerate" type="Timer" parent="."]
autostart = true

[connection signal="input_event" from="CookieNode" to="CookieNode" method="_on_input_event"]
[connection signal="able_cookie" from="UIIngame" to="CookieNode" method="_on_ui_ingame_able_cookie"]
[connection signal="unable_cookie" from="UIIngame" to="CookieNode" method="_on_ui_ingame_unable_cookie"]
[connection signal="timeout" from="TimerCookieGenerate" to="." method="_on_timer_cookie_generate_timeout"]
